@@ -8,3 +8,5 @@ stop 2 seconds before timeout (time penalty worse than gap penalty)
 Provide no solution
 --- 26 dec small10 ---
 Revert the no solution part
+Solution hiniting is now a parameter. Impact factor 0.8
+--- 26 dec full ---
